<resources>
    <string name="app_name">CubeCalc</string>
    <string name="kubus">Kubus</string>
    <string name="balok">Balok</string>
    <string name="limas_segiempat">Limas Segiempat</string>
    <string name="prisma_segitiga">Prisma Segitiga</string>
    <string name="limas_segitiga">Limas Segitiga</string>
    <string name="silinder_tabung">Silinder (Tabung)</string>
    <string name="kerucut">Kerucut</string>
    <string name="bola">Bola</string>
    <string name="kubus_desc">Kubus adalah bangun ruang tiga dimensi yang dibatasi oleh enam bidang sisi yang kongruen berbentuk bujur sangkar. Kubus memiliki 6 sisi, 12 rusuk dan 8 titik sudut. Kubus juga disebut bidang enam beraturan, selain itu juga merupakan bentuk khusus dalam prisma segiempat.</string>
    <string name="luas_permukaan">Luas Permukaan</string>
    <string name="kubus_rumus_luas">6 x R x R</string>
    <string name="volume">Volume</string>
    <string name="kubus_rumus_volume">R x R x R</string>
    <string name="balok_rumus_luas">(2 x p x l) + (2 x p x t) + (2 x l x t)</string>
    <string name="balok_rumus_volume">p x l xt</string>
    <string name="limas_segiempat_luas">LS1 + LS2 + LS3 + LS4 + Luas Alas</string>
    <string name="limas_segiempat_volume"><![CDATA[&#8531; x Luas Alas x Tinggi]]></string>
    <string name="prisma_segitiga_luas">Keliling Segitiga x Tinggi Prisma + 2 x Luas Segitiga</string>
    <string name="prisma_segitiga_volume">Luas Alas x Tinggi</string>
    <string name="limas_segitiga_luas">LS1 + LS2 + LS3 + Luas Alas</string>
    <string name="limas_segitiga_volume"><![CDATA[&#8531; x Luas Alas x Tinggi]]></string>
    <string name="tabung_luas">2 x \u03C0 x r x T + 2 x \u03C0 x r x r</string>
    <string name="tabung_volume">Luas Alas x Tinggi</string>
    <string name="kerucut_luas">\u03C0 x r x s + \u03C0 x r x r</string>
    <string name="kerucut_volume"><![CDATA[&#8531; x \u03C0 x r x r x t]]></string>
    <string name="bola_luas">4 x \u03C0 x r x r</string>
    <string name="bola_volume">4/3 x \u03C0 x r x r x r</string>
    <string name="balok_desc">Balok adalah bangun ruang tiga dimensi yang dibentuk oleh tiga pasang persegi atau persegi panjang, dengan paling tidak satu pasang di antaranya berukuran berbeda. Balok memiliki 6 sisi, 12 rusuk dan 8 titik sudut. Balok yang dibentuk oleh enam persegi sama dan sebangun disebut sebagai kubus.</string>
    <string name="hasil">Hasil</string>
    <string name="limas_segiempat_desc">Limas segi empat adalah limas yang mempunyai alas yang berbentuk segi empat, baik itu berupa persegi panjang, belah ketupat, jajar genjang, layang-layang, persegi dan lain sebagainya.</string>
    <string name="tabung_desc">Dalam geometri, tabung atau silinder adalah bangun ruang tiga dimensi yang dibentuk oleh dua buah lingkaran identik yang sejajar dan sebuah persegi panjang yang mengelilingi kedua lingkaran tersebut. Tabung memiliki 3 sisi dan 2 rusuk. Kedua lingkaran disebut sebagai alas dan tutup tabung serta persegi panjang yang menyelimutinya disebut sebagai selimut tabung.</string>
    <string name="prisma_segitiga_desc">Prisma segitiga adalah bangun ruang tiga dimensi yang memiliki bentuk alas dan juga atau atau penutup berbentuk segitiga, dan juga prisma segitiga memiliki selimut yang berbentuk persegi panjang.</string>
    <string name="limas_segitiga_desc">Limas Segitiga adalah bangun ruang yang mempunyai alas dengan bentuk segitiga yang juga mempunyai sisi-sisi tegak berbentuk segitiga, yang puncaknya saling berhimpit pada satu titik.</string>
    <string name="kerucut_desc">Kerucut adalah sebuah limas istimewa yang beralas lingkaran. Kerucut memiliki 2 sisi dan 1 rusuk. Sisi tegak kerucut tidak berupa segitiga tapi berupa bidang miring yang disebut selimut kerucut.</string>
    <string name="bola_desc">Bola adalah bangun ruang tiga dimensi yang dibentuk oleh tak hingga lingkaran berjari-jari sama panjang dan berpusat pada satu titik yang sama. Bola hanya memiliki 1 sisi.</string>
    <string name="share">Share</string>
    <string name="rate">Rate</string>
    <string name="feedback">Feedback</string>
    <string name="nama">Nama</string>
    <string name="my_name">Erik Rio Setiawan</string>
    <string name="tentang_saya">Tentang Saya</string>
    <string name="alamat">Alamat</string>
    <string name="my_address">Bungkal, Ponorogo, Jawa Timur</string>
    <string name="minat_hobi">Minat / Hobi</string>
    <string name="my_hobby"><![CDATA[Coding & Membaca]]></string>
    <string name="riwayat_pendidikan">Riwayat Pendidikan</string>
    <string name="my_elementary_school">SD Negeri Pager</string>
    <string name="my_junior_high_school">SMP Negeri 1 Bungkal</string>
    <string name="my_senior_high_school">SMA Negeri 1 Bungkal</string>
    <string name="my_college_concentration">S1 Teknik Informatika</string>
    <string name="my_college">Universitas Muhammadiyah Ponorogo</string>
</resources>
