<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_about"
    tools:context=".AboutMeActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginBottom="@dimen/activity_vertical_margin"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        android:layout_marginTop="@dimen/activity_vertical_margin">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tentang_saya"
            android:textSize="30sp"
            android:shadowColor="@color/colorPrimary"
            android:gravity="center"
            android:textColor="@android:color/white"
            android:textStyle="bold"
            android:layout_marginBottom="@dimen/activity_vertical_margin"/>

        <ImageView
            android:contentDescription="@string/my_name"
            android:background="@drawable/image_border"
            android:padding="7dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:scaleType="centerInside"
            android:src="@drawable/img_me"
            android:layout_gravity="center"
            android:adjustViewBounds="true"
            android:layout_marginBottom="@dimen/activity_vertical_margin"/>

        <TextView
            style="@style/Details.Title"
            android:text="@string/nama"/>

        <TextView
            style="@style/Details"
            android:text="@string/my_name"
            android:layout_marginBottom="@dimen/activity_vertical_margin"/>

        <TextView
            style="@style/Details.Title"
            android:text="@string/alamat"/>

        <TextView
            style="@style/Details"
            android:text="@string/my_address"
            android:layout_marginBottom="@dimen/activity_vertical_margin"/>

        <TextView
            style="@style/Details.Title"
            android:text="@string/minat_hobi"/>

        <TextView
            style="@style/Details"
            android:text="@string/my_hobby"
            android:layout_marginBottom="@dimen/activity_vertical_margin"/>

        <TextView
            style="@style/Details.Title"
            android:text="@string/riwayat_pendidikan"/>
        <TextView
            style="@style/Details"
            android:text="@string/my_elementary_school"/>
        <TextView
            style="@style/Details"
            android:text="@string/my_junior_high_school"/>
        <TextView
            style="@style/Details"
            android:text="@string/my_senior_high_school"/>
        <TextView
            style="@style/Details"
            android:text="@string/my_college_concentration"/>

        <TextView
            style="@style/Details"
            android:text="@string/my_college"
            android:layout_marginBottom="@dimen/activity_vertical_margin"/>
        
    </LinearLayout>
</ScrollView>
