<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PrismaSegitigaActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        android:layout_marginBottom="@dimen/activity_vertical_margin"
        android:orientation="vertical">

        <TextView
            style="@style/ContentDescription"
            android:text="@string/prisma_segitiga_desc" />

        <ImageView
            style="@style/ImageContent"
            android:contentDescription="@string/prisma_segitiga"
            android:src="@drawable/prisma_segitiga" />

        <TextView
            style="@style/FunctionName"
            android:text="@string/luas_permukaan" />

        <TextView
            style="@style/Function"
            android:text="@string/prisma_segitiga_luas" />

        <TextView
            style="@style/FunctionName"
            android:text="@string/volume" />

        <TextView
            style="@style/Function"
            android:text="@string/prisma_segitiga_volume" />

        <EditText
            android:id="@+id/edit_text_keliling_segitiga"
            style="@style/Form"
            android:hint="Keliling Segitiga" />

        <EditText
            android:id="@+id/edit_text_tinggi"
            style="@style/Form"
            android:hint="Tinggi" />

        <EditText
            android:id="@+id/edit_text_luas_segitiga"
            style="@style/Form"
            android:hint="Luas Segitiga" />

        <EditText
            android:id="@+id/edit_text_luas_alas"
            style="@style/Form"
            android:hint="Luas Alas" />

        <Button
            android:id="@+id/button_calculate"
            style="@style/ButtonCalculate" />

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:layout_marginRight="@dimen/activity_horizontal_margin"
            android:layout_marginBottom="@dimen/activity_vertical_margin">

            <TableRow android:gravity="center">

                <TextView
                    style="@style/Result"
                    android:text="Luas Permukaan : " />

                <TextView
                    android:id="@+id/text_view_luas_result"
                    style="@style/Result"
                    android:text="@string/hasil" />

            </TableRow>

            <TableRow android:gravity="center">

                <TextView
                    style="@style/Result"
                    android:text="Volume                 : " />

                <TextView
                    android:id="@+id/text_view_volume_result"
                    style="@style/Result"
                    android:text="@string/hasil" />
            </TableRow>

        </TableLayout>
    </LinearLayout>

</ScrollView>